--- a/src/main/java/org/example/style.css
+++ b/src/main/java/org/example/style.css
@@ -1,12 +1,3 @@
-.grid-pane {
-    -fx-background-color: #2c3e50; /* تغییر رنگ پس‌زمینه GridPane */
-    -fx-padding: 10px;
-    -fx-hgap: 10px;
-    -fx-vgap: 10px;
-}
-
-.button {
-    -fx-background-color: #3498db; /* رنگ دکمه‌ها */
+.white-text {
     -fx-text-fill: white;
-    -fx-font-size: 14px;
 }
